--- a/AHMH/Base.lproj/Main.storyboard
+++ b/AHMH/Base.lproj/Main.storyboard
@@ -373,6 +373,7 @@
                                                                 <connections>
                                                                     <outlet property="journalImageView" destination="3OP-Lo-5q5" id="8gA-Xg-gwv"/>
                                                                     <outlet property="journalTitle" destination="NP8-ZU-Ic6" id="qhB-Lr-cK8"/>
+                                                                    <segue destination="sra-5K-oI1" kind="show" identifier="showJournalDetail" id="Nh7-px-A7U"/>
                                                                 </connections>
                                                             </collectionViewCell>
                                                         </cells>
@@ -667,6 +668,67 @@
             </objects>
             <point key="canvasLocation" x="1000" y="840"/>
         </scene>
+        <!--Journal Detail View Controller-->
+        <scene sceneID="3p2-TT-eoF">
+            <objects>
+                <viewController id="sra-5K-oI1" customClass="JournalDetailViewController" customModule="AHMH" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="2Us-r6-q5r">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="lQS-OJ-i5X">
+                                <rect key="frame" x="16" y="118" width="382" height="645"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="부부갈등, 자녀에게 미치는 영향 최소화하기" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dSV-kU-23B">
+                                        <rect key="frame" x="0.0" y="0.0" width="382" height="21.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="이영미 (분당어린이카운슬링 소장)" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ayM-kc-nLc">
+                                        <rect key="frame" x="0.0" y="41.5" width="382" height="18"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                        <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="20p-eL-5SP">
+                                        <rect key="frame" x="0.0" y="79.5" width="382" height="565.5"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <mutableString key="text">'화성에서 온 남자, 금성에서 온 여자’라는 책 제목처럼, 남녀는 태생부터 다른 것일까?
+사물에 대한 인식도 다르고 느낌도 다른 이들이 부모가 된 후에도 자녀를 양육하는 방법과 태도 역시 차이를 보인다.
+이러한 차이가 서로를 존중하는 방식이기 보다는 자기 방식을 주장하게 되고 상대방에게 주입시키려고 하다보니 갈등으로 이어지고 그 긴장감은 고스란히 자녀가 갖게 된다.
+자녀양육, 시댁과 친정문제, 성격 등 수없이 부딪치는 부모의 다툼 속에서 자녀들은 가슴이 두근두근, 주눅과 불안, 공포를 느낀다.
+각기 다른 성향을 지닌 가족이 서로에게 적응하는데 많은 시간과 시행착오가 필요하다. 수유시간부터 시작하여 3살도 안된 아이에게 영어를 가르치냐, 게임기를 주냐 마냐의 잦은 의견충돌은 결국 부모와 아이 모두에게 상처가 된다.
+건장한 외모에 씩씩하고 우렁찬 목소리를 가진 아빠는 아들이 남자답지 못하다고 엄마 탓을 한다. 아이가 점점 의존적으로 되는 모습이 늘 엄마가 감싸고 보호해 줘서 그렇다고 한다. 그런데 그렇게 다그치는 아빠를 보면 아이는 더 주눅 들고 무서워 엄마에게 더 매달린다.
+세심하고 민감한 완벽주의 엄마는 털털하고 무심한 아빠에게 불만이 많다. 아이가 힘들어 하면 도와주는 게 아니라 지켜보고만 있고, 아이가 넘어져도 ‘괜찮아’로 일관하는 1도 걱정 없는 남편에게 항상 서운하다. 엄마의 시선은 늘 아이의 행동을 따라가고 아이가 입만 뻥긋해도 모든 것이 즉각 해결된다. 완벽하게 모든 것이 갖추어진 ‘엄마 품’에서 아이는 벗어나기가 두렵다. 분리불안으로 어린이집등교를 거부하는 아이는 ‘엄마가 보고 싶어요, 엄마가 걱정돼요’ 라는 이유로 세상으로 나가기를 완강히 거부한다. 엄마처럼 완벽한 사람, 자신의 모든 요구를 알아서 척척 대령하는 자가 세상밖에는 없는 걸 아이는 잘 안다.
+가족 간에 삼각관계를 이루고, 가족구성원이 편 가르기를 하고, 마치 원수처럼 대한다면 우리의 자녀는 더 이상 성장할 수가 없다.
+ 
+성장에 방해가 되는 자녀의 심리상태는 어떨까...
+    
+1) 불안해요.
+ 부부관계가 늘 긴장과 다툼의 연속이라면, 그들의 자녀는 ‘엄마, 아빠가 언제 또 싸우지, 저러다 헤어지는 것은 아닐까, 그럼 난 누구랑 살지‘라는 걱정과 불안으로 마음고생을 하게 된다. 무슨 일이 일어날지 예측불가로 늘 긴장하고 있고, 매사에 집중하기가 어렵다. 자신의 미래를 절대적으로 부모에게 의지하고 있는 자녀는 자신의 안전과 생존의 불확실성에 대한 두려움이 커지고 불안과 산만함이 나타나며 우울해진다.</mutableString>
+                                        <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="YEI-hZ-heH"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="YEI-hZ-heH" firstAttribute="bottom" secondItem="lQS-OJ-i5X" secondAttribute="bottom" constant="50" id="94Y-fg-Mtf"/>
+                            <constraint firstItem="lQS-OJ-i5X" firstAttribute="centerX" secondItem="2Us-r6-q5r" secondAttribute="centerX" id="QEP-OZ-2al"/>
+                            <constraint firstItem="lQS-OJ-i5X" firstAttribute="top" secondItem="YEI-hZ-heH" secondAttribute="top" constant="30" id="U0e-ak-oh6"/>
+                            <constraint firstItem="lQS-OJ-i5X" firstAttribute="leading" secondItem="YEI-hZ-heH" secondAttribute="leading" constant="16" id="oQg-Ij-TKa"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="OLY-4Y-ExW"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zoG-vz-Ply" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="280" y="1651"/>
+        </scene>
         <!--Facility Detail View Controller-->
         <scene sceneID="gWk-JL-K7i">
             <objects>
@@ -746,7 +808,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XMv-e5-ZxJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1000" y="1608"/>
+            <point key="canvasLocation" x="1072" y="1634"/>
         </scene>
         <!--Baby Sitter View Controller-->
         <scene sceneID="WeA-Xc-jLS">
